--- a/app/src/main/res/layout/activity_add_shift.xml
+++ b/app/src/main/res/layout/activity_add_shift.xml
@@ -71,7 +71,7 @@
         android:layout_width="186dp"
         android:layout_height="43dp"
         android:layout_marginBottom="12dp"
-        android:text="Home"
+        android:text="Done"
         android:onClick="btnHome"
         app:backgroundTint="#48AE34"
         app:layout_constraintBottom_toTopOf="@+id/textViewCurShifts"
