--- a/app/src/main/res/layout/activity_add_condition.xml
+++ b/app/src/main/res/layout/activity_add_condition.xml
@@ -6,83 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".AddConditionActivity">
 
-    <Switch
-        android:id="@+id/switch10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:paddingTop="10dp"
-        android:text="Th"
-        app:flow_verticalAlign="center"
-        app:layout_constraintStart_toEndOf="@+id/switch9"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Switch
-        android:id="@+id/switch8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:paddingTop="10dp"
-        android:text="T"
-        app:flow_verticalAlign="center"
-        app:layout_constraintStart_toEndOf="@+id/switch6"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Switch
-        android:id="@+id/switch6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:paddingTop="10dp"
-        android:text="M"
-        app:flow_verticalAlign="center"
+    <TextView
+        android:id="@+id/textViewDay"
+        android:layout_width="191dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Switch
-        android:id="@+id/switch9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:paddingTop="10dp"
-        android:text="W"
-        app:flow_verticalAlign="center"
-        app:layout_constraintStart_toEndOf="@+id/switch8"
-        app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/editTextTimeStartCondition"
+        android:layout_width="125dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="48dp"
+        android:ems="10"
+        android:hint="start time"
+        android:inputType="time"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddCurrCondition"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTimeEndCondition"
+        app:layout_constraintHorizontal_bias="0.355"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Switch
-        android:id="@+id/switch11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:paddingTop="10dp"
-        android:text="F"
-        app:flow_verticalAlign="center"
+    <EditText
+        android:id="@+id/editTextTimeEndCondition"
+        android:layout_width="125dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="44dp"
+        android:ems="10"
+        android:hint="end time"
+        android:inputType="time"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddCurrCondition"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/buttonAddCurrCondition"
+        android:layout_width="186dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="8dp"
+        android:text="Add Condition"
+        android:onClick="btnAddCondition"
+        app:backgroundTint="#48AE34"
+        app:layout_constraintBottom_toTopOf="@+id/buttonHome"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/switch10"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Switch
-        android:id="@+id/switch12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingTop="10dp"
-        android:text="Sa"
-        app:layout_constraintEnd_toStartOf="@+id/switch13"
-        app:layout_constraintHorizontal_bias="0.692"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch9" />
-
-    <Switch
-        android:id="@+id/switch13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="132dp"
-        android:paddingTop="10dp"
-        android:text="Su"
+    <Button
+        android:id="@+id/buttonHome"
+        android:layout_width="186dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="12dp"
+        android:text="Done"
+        android:onClick="btnDone"
+        app:backgroundTint="#48AE34"
+        app:layout_constraintBottom_toTopOf="@+id/textViewCurShifts"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch9" />
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewCurShifts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Conditions"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="325dp"
+        android:layout_height="350dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:id="@+id/conditionLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
