--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -52,6 +52,7 @@
         android:layout_height="66dp"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="Generate Schedule"
+        android:onClick="onBtnClickedGenerateSchedule"
         app:backgroundTint="#48AE34"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
